Fix facet headers overlapping, refs #8994

--- a/plugins/arDominionPlugin/css/less/scaffolding.less
+++ b/plugins/arDominionPlugin/css/less/scaffolding.less
@@ -409,7 +409,7 @@ div#content > table.table {
   .facet-header a  {
     text-decoration: none;
     display: block;
-    padding: 4px 4px 6px 6px;
+    padding: 4px 30px 6px 6px;
     color: @gray;
 
     &:hover {
@@ -424,6 +424,8 @@ div#content > table.table {
       font-variant: normal;
       position: absolute;
       right: 8px;
+      top: 50%;
+      transform: translate(0, -50%);
       content: "\f107";
       font-family: "FontAwesome";
       color: @gray;
